# aakash-airflow-snowflake-dag

./: .gitignore  README.md  main.py  pyproject.toml
aakash_airflow_snowflake_dag.egg-info/: PKG-INFO
dags/: vantage_to_snowflake_v2.py
tests/: test_snowflake_connection.py
